--- a/package.json
+++ b/package.json
@@ -28,13 +28,9 @@
     "build-player-skin": "browserify -g browserify-css ./src/js/player-skin.js -o ./dist/player-skin.js",
     "build-css": "npm run build-player-skin & npm run copy-css-build",
     "build": "npm run build-js & npm run build-css",
-    "copy-videojs": "cp ./node_modules/video.js/dist/video.js ./dist/",
-    "copy-videojs-errors": "cp ./node_modules/videojs-errors/dist/videojs-errors.js ./dist/",
     "copy-css": "cpx ./src/css/360-skin.css ./dist/",
     "copy-css-build": "cp ./src/css/360-skin.css ./dist/",
-    "copy-dashjs": "cp ./node_modules/dashjs/dist/dash.all.min.js ./dist/",
-    "copy-videojs-dash": "cp ./node_modules/videojs-contrib-dash/dist/videojs-dash.min.js ./dist/",
-    "postinstall": "npm run copy-videojs & npm run copy-dashjs & npm run copy-videojs-dash & npm run copy-videojs-errors & npm run build",
+    "postinstall": "npm run build",
     "serve-no-min": "npm run watch-js-no-min & npm run watch-css & nodemon ./server.js",
     "serve": "npm run watch & nodemon ./server.js"
   },
